app/scss/adminPage.scss
@import "imports/variables";

body {

  .container {

    .new-user-container {
      margin-top: 3rem;
    }

    .display-flex {
      display: flex;
      align-items: center;

      label {
        font-size: 1.5rem;
        font-weight: 400;
        margin: 0 0.5rem 0 0;
      }

      select {
        margin-right: 10px;
      }

      input {
        margin-right: 1rem;

        &.primary-button {
          font-size: 1.4rem;
          color: $main-background-color;
        }
      }
    }

    .score-container {
      margin-top: 5rem;

      .search-filter-container {
        margin-top: 3rem;
        display: flex;
        height: 180px;
        flex-direction: column;
        justify-content: space-between;

        .filterContainer {
          label {
            font-weight: 400;
            font-size: 1.5rem;
          }
        }
      }
    }

    select:not([multiple]) {
      -webkit-appearance: none;
      -moz-appearance: none;
      background-position: right 50%;
      background-repeat: no-repeat;
      background-image: url("../images/output-onlinepngtools.png");
      padding: .5rem;
      padding-right: 1.5rem;
      background-color: $main-background-color;
    }

    .dropdown {
      height: 34px;
      margin-right: 0.5rem;
      border-radius: 0;

      option {
        font-size: 1.5rem;
      }
    }

    .table {
      font-size: 1.5rem;

      .edit-user-button, .delete-user-button {
        color: $main-background-color;
      }

      .edit-user-button {
        background-color: $edit-button;
      }

      .delete-user-button {
        background-color: $primary-button-hover;
      }

      .email {
        border-right: 1px solid $score-table-border;
      }

      &.user-score-table {
        margin-top: 4rem;

        tbody {
          tr {
            td {
              vertical-align: middle;
            }
          }
        }
      }
    }
  }
}

.new-question-container {
  overflow: auto;
  height: 150px;
  flex-direction: column;
  justify-content: space-between;
  margin-bottom: 30px;

  a{margin-top: 20px;}
}

.test-not-taken {
  background-color: #ffffff;
}
.dubious-grade {
  background-color: $light-orange;
}
.passing-grade {
  background-color: $light-green;
}
.top-grade {
  background-color: $light-purple;
}

.new-test-container {
  margin-top: 30px;
}

#message-target {
  margin-top: 10px;
}

#addTestName {
  margin-bottom: 10px;
}

.success-message {
  color: $success-message;
}

.failure-message {
  color: $failure-message
}

